# oppy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml  scan.py
.github/workflows/: verify.yml
database/: connection.py
scrapers/: base.py  custom_rss.py  devpost.py  remoteok.py  unstop.py  weworkremotely.py
utils/: config.py  exporter.py  tui.py
